--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/Sport_fitness_complex
+spring.datasource.username=postgres
+spring.datasource.password=Fu55js
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+spring.data.rest.basePath=/api
 
