First backend autocommit

--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,11 @@
             <version>5.11.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.impossibl.pgjdbc-ng</groupId>
+            <artifactId>pgjdbc-ng</artifactId>
+            <version>0.8.6</version>
+        </dependency>
 
     </dependencies>
 
@@ -137,6 +142,7 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                    <executable>true</executable>
                 </configuration>
             </plugin>
 
