--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/sport_complex
-spring.datasource.username=postgres
-spring.datasource.password=Fu55js
+spring.datasource.url=jdbc:postgresql://dpg-cpbngfect0pc73a8pm60-a.frankfurt-postgres.render.com:5432/sportcomplex_c078
+spring.datasource.username=alex
+spring.datasource.password=ckzcBenEh8vXAUm0HpU2YCgr2EfaztOp
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 spring.data.rest.basePath=/api
